# GeoNotes98

./: ACCESSIBILITY.md  ASSET_CREATION.md  BUILD.md  DESIGN.md  EXPORT.md  README.md  THEMES.md  just.1  justfile
apps/desktop/: README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: app.d.ts  app.html  app.postcss
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: index.ts  types.ts
apps/desktop/src/lib/assets/sample-pack/: theme.json
apps/desktop/src/lib/assets/sample-pack/sounds/: README.md
apps/desktop/src/lib/components/: AmbientMessage.svelte  DesktopShell.svelte  NoteWindow.svelte  StickerCanvas.svelte  StickerPalette.svelte  ThemeDrawer.svelte  ThemeSwitcher.svelte
apps/desktop/src/lib/features/: exporter.ts  themes.ts
apps/desktop/src/lib/features/messages/: reflections.ts
apps/desktop/src/lib/features/themes/: index.ts
apps/desktop/src/lib/persistence/: db.ts  notes.ts  settings.ts  stickers.ts
apps/desktop/src/lib/styles/: theme.css
apps/desktop/src/lib/tokens/: tokens.json
apps/desktop/src/routes/: +layout.svelte  +page.svelte
docs/: UI_COMPONENT_SPEC.md
prompts/agents/: ui-architect.md
tasks/: 020-ux-polish.task.md
tools/: verify-env.ps1
